--- a/GHISLER/CONFIG/Configuration.ini
+++ b/GHISLER/CONFIG/Configuration.ini
@@ -2,10 +2,10 @@
 
 UseNewDefFont=1
 SetEncoding=дц.do.not.remove
-firstmnu=3294
+firstmnu=734
 FirstTimeIconLib=0
 FirstTime=0
-test=233
+test=18
 ShowCentury=1
 Aligned extension=1
 SizeStyle=7
@@ -18,7 +18,7 @@ FirstTimeUnpack=0
 FirstTimeZIP=0
 
 Viewer=""C:\Program Files\Sublime Text\sublime_text.exe" "%1""
-Editor=""C:\Program Files\Sublime Text\sublime_text.exe" "%1""
+Editor=""c:\Program Files\totalcmd\plugins\utils\util_tcer\tcer.exe" "%1""
 
 
 ;Viewer=""C:\Program Files\Sublime Text\sublime_text.exe" "%1""
@@ -75,7 +75,7 @@ UseTrash=1
 LastSearchOptions=32
 CustomFieldsInDlg=0
 SyncFlags=9
-SyncButtons=49
+SyncButtons=57
 InstallDir=c:\Program Files\totalcmd
 DarkMode=0
 CopyHugeBlockSize=10240
@@ -113,3 +113,4 @@ IgnoreListFileEnabled=0
 IgnoreListFile=C:\Users\minhwasoo\AppData\Roaming\GHISLER\tcignore.txt
 ShowCopyOptions=1
 ThumbsInDlg=0
+TabDir=C:\Users\minhwasoo\Downloads\
