--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -38,132 +38,134 @@ menu19=--
 menu20=-total commander
 menu21=totalcmd
 cmd21=cd C:\Program Files\totalcmd
-menu22=Total Commander ini
-cmd22=cd %COMMANDER_PATH%\ini
-menu23=totalcmd - ini - config
-cmd23=cd %COMMANDER_PATH%\ini\config
-menu24=Dos Batch File Example
-cmd24=cd %COMMANDER_PATH%\ini\config\Dos Batch File Example
-menu25=ini for minhwasoo
-cmd25=cd %COMMANDER_PATH%\ini\01_wincmd.ini\minhwasoo
-menu26=inside TotalCmd GHISLER
-cmd26=cd %COMMANDER_PATH%\ini\GHISLER
-menu27=icons dll
-cmd27=cd %COMMANDER_PATH%\ini\icons dll
-menu28=RunAsTool
-cmd28=cd %COMMANDER_PATH%\RunAsTool
-menu29=98_Sordum
-cmd29=cd %COMMANDER_PATH%\RunAsTool\98_Sordum
-menu30=99_NirSoft
-cmd30=cd %COMMANDER_PATH%\RunAsTool\99_NirSoft
-menu31=cmder config
-cmd31=cd %COMMANDER_PATH%\RunAsTool\cmder\config
-menu32=--
-menu33=-ExaData
-menu34=11_exaData
-cmd34=cd d:\11_exaData
-menu35=05_WSH
-cmd35=cd d:\11_exaData\05_OS\05_WSH
-menu36=05_OS
-cmd36=cd d:\11_exaData\05_OS
-menu37=06_Utility
-cmd37=cd d:\11_exaData\06_util
-menu38=016_Dev Tool
-cmd38=cd d:\11_exaData\06_util\016_dev tool
-menu39=010_ZZATURI
-cmd39=cd d:\11_exaData\06_util\010_ZZATURI
-menu40=01_Test Program
-cmd40=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
-menu41=12_BAT_FFMPEG
-cmd41=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
-menu42=10_cmder
-cmd42=cd d:\11_exaData\06_util\099_Game\10_cmder
-menu43=099_Game
-cmd43=cd d:\11_exaData\06_util\099_Game
-menu44=00_Program Data
-cmd44=cd d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\00_Program Data
-menu45=--
-menu46="-hardrain , Ground Water Report "
-menu47=04_Reference Data
-cmd47=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
-menu48=11_JungCheon Photo by Season
-cmd48=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
-menu49=07_LandSlide
-cmd49=cd d:\12_dev\02_Excel\07_LandSlide
-menu50=05_ihanseol - 2020
-cmd50=cd d:\09_hardRain\05_ihanseol - 2020
-menu51=06_ihanseol - 2021
-cmd51=cd d:\09_hardRain\06_ihanseol - 2021
-menu52=07_ihanseol - 2022
-cmd52=cd d:\09_hardRain\07_ihanseol - 2022
-menu53=08_ihanseol - 2023
-cmd53=cd d:\09_hardRain\08_ihanseol - 2023
-menu54=--
-menu55=-WSL2
-menu56=WSL LocalState EXT4
-cmd56=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
-menu57=WSL minhwasoo
-cmd57=cd a:\home\minhwasoo
-menu58=--
-menu59=-Git Bash
-menu60=Git
-cmd60=cd C:\Program Files\Git
-menu61=gitbash /usr/bin
-cmd61=cd C:\Program Files\Git\usr\bin
-menu62=gitbash - mingw64 - bin
-cmd62=cd C:\Program Files\Git\mingw64\bin
-menu63=gitbvash - mingw64 - git-core
-cmd63=cd C:\Program Files\Git\mingw64\libexec\git-core
-menu64=gitbash - mergetools
-cmd64=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
-menu65=--
-menu66=-Appdata and Local
-menu67=d:/12_dev/  Action and Configuration
-cmd67=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
-menu68=Sublime Installed Packages
-cmd68=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
-menu69=Sublime Packages
-cmd69=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
-menu70=Sublime Packages User
-cmd70=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
-menu71=FlowLauncher CustomIcons
-cmd71=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu72=Bing WPImages
-cmd72=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
-menu73=AppData Local
-cmd73=cd C:\Users\minhwasoo\AppData\Local
-menu74=AddData Roaming
-cmd74=cd C:\Users\minhwasoo\AppData\Roaming
-menu75=WindowsTerminal Setting
-cmd75=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
-menu76=ProgramData
-cmd76=cd C:\ProgramData
-menu77=--
-menu78=00_Emule
-cmd78=cd C:\ProgramData\00_Emule
-menu79=02_ROMS
-cmd79=cd d:\11_exaData\10_Game\02_ROMS
-menu80=03_download
-cmd80=cd d:\03_download
-menu81=03_my_script
-cmd81=cd d:\12_dev\03_visual_lisp\03_my_script
-menu82=02_Book
-cmd82=cd d:\02_Book
-menu83=08_나의작업
-cmd83=cd d:\08_나의작업\
-menu84=04_mp3
-cmd84=cd d:\04_mp3
-menu85=05_Send
-cmd85=cd d:\05_Send
-menu86=06_Send2
-cmd86=cd d:\06_Send2
-menu87=12_dev
-cmd87=cd d:\12_dev
-menu88=C:_Temp
-cmd88=cd c:\Temp
-menu89=e: download
-cmd89=cd e:\download
-menu90=Bing
-cmd90=cd d:\10_photo\Desktop Pictures\bing
-menu91=NAS4DUAL 06_util
-cmd91=cd z:\11_exaData\06_util
+menu22=plugins , totalcommander
+cmd22=cd %COMMANDER_PATH%\plugins
+menu23=Total Commander ini
+cmd23=cd %COMMANDER_PATH%\ini
+menu24=totalcmd - ini - config
+cmd24=cd %COMMANDER_PATH%\ini\config
+menu25=Dos Batch File Example
+cmd25=cd %COMMANDER_PATH%\ini\config\Dos Batch File Example
+menu26=ini for minhwasoo
+cmd26=cd %COMMANDER_PATH%\ini\01_wincmd.ini\minhwasoo
+menu27=inside TotalCmd GHISLER
+cmd27=cd %COMMANDER_PATH%\ini\GHISLER
+menu28=icons dll
+cmd28=cd %COMMANDER_PATH%\ini\icons dll
+menu29=RunAsTool
+cmd29=cd %COMMANDER_PATH%\RunAsTool
+menu30=98_Sordum
+cmd30=cd %COMMANDER_PATH%\RunAsTool\98_Sordum
+menu31=99_NirSoft
+cmd31=cd %COMMANDER_PATH%\RunAsTool\99_NirSoft
+menu32=cmder config
+cmd32=cd %COMMANDER_PATH%\RunAsTool\cmder\config
+menu33=--
+menu34=-ExaData
+menu35=11_exaData
+cmd35=cd d:\11_exaData
+menu36=05_WSH
+cmd36=cd d:\11_exaData\05_OS\05_WSH
+menu37=05_OS
+cmd37=cd d:\11_exaData\05_OS
+menu38=06_Utility
+cmd38=cd d:\11_exaData\06_util
+menu39=016_Dev Tool
+cmd39=cd d:\11_exaData\06_util\016_dev tool
+menu40=010_ZZATURI
+cmd40=cd d:\11_exaData\06_util\010_ZZATURI
+menu41=01_Test Program
+cmd41=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
+menu42=12_BAT_FFMPEG
+cmd42=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
+menu43=10_cmder
+cmd43=cd d:\11_exaData\06_util\099_Game\10_cmder
+menu44=099_Game
+cmd44=cd d:\11_exaData\06_util\099_Game
+menu45=00_Program Data
+cmd45=cd d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\00_Program Data
+menu46=--
+menu47="-hardrain , Ground Water Report "
+menu48=04_Reference Data
+cmd48=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
+menu49=11_JungCheon Photo by Season
+cmd49=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
+menu50=07_LandSlide
+cmd50=cd d:\12_dev\02_Excel\07_LandSlide
+menu51=05_ihanseol - 2020
+cmd51=cd d:\09_hardRain\05_ihanseol - 2020
+menu52=06_ihanseol - 2021
+cmd52=cd d:\09_hardRain\06_ihanseol - 2021
+menu53=07_ihanseol - 2022
+cmd53=cd d:\09_hardRain\07_ihanseol - 2022
+menu54=08_ihanseol - 2023
+cmd54=cd d:\09_hardRain\08_ihanseol - 2023
+menu55=--
+menu56=-WSL2
+menu57=WSL LocalState EXT4
+cmd57=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
+menu58=WSL minhwasoo
+cmd58=cd a:\home\minhwasoo
+menu59=--
+menu60=-Git Bash
+menu61=Git
+cmd61=cd C:\Program Files\Git
+menu62=gitbash /usr/bin
+cmd62=cd C:\Program Files\Git\usr\bin
+menu63=gitbash - mingw64 - bin
+cmd63=cd C:\Program Files\Git\mingw64\bin
+menu64=gitbvash - mingw64 - git-core
+cmd64=cd C:\Program Files\Git\mingw64\libexec\git-core
+menu65=gitbash - mergetools
+cmd65=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
+menu66=--
+menu67=-Appdata and Local
+menu68=d:/12_dev/  Action and Configuration
+cmd68=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
+menu69=Sublime Installed Packages
+cmd69=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
+menu70=Sublime Packages
+cmd70=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
+menu71=Sublime Packages User
+cmd71=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
+menu72=FlowLauncher CustomIcons
+cmd72=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
+menu73=Bing WPImages
+cmd73=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
+menu74=AppData Local
+cmd74=cd C:\Users\minhwasoo\AppData\Local
+menu75=AddData Roaming
+cmd75=cd C:\Users\minhwasoo\AppData\Roaming
+menu76=WindowsTerminal Setting
+cmd76=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
+menu77=ProgramData
+cmd77=cd C:\ProgramData
+menu78=--
+menu79=00_Emule
+cmd79=cd C:\ProgramData\00_Emule
+menu80=02_ROMS
+cmd80=cd d:\11_exaData\10_Game\02_ROMS
+menu81=03_download
+cmd81=cd d:\03_download
+menu82=03_my_script
+cmd82=cd d:\12_dev\03_visual_lisp\03_my_script
+menu83=02_Book
+cmd83=cd d:\02_Book
+menu84=08_나의작업
+cmd84=cd d:\08_나의작업\
+menu85=04_mp3
+cmd85=cd d:\04_mp3
+menu86=05_Send
+cmd86=cd d:\05_Send
+menu87=06_Send2
+cmd87=cd d:\06_Send2
+menu88=12_dev
+cmd88=cd d:\12_dev
+menu89=C:_Temp
+cmd89=cd c:\Temp
+menu90=e: download
+cmd90=cd e:\download
+menu91=Bing
+cmd91=cd d:\10_photo\Desktop Pictures\bing
+menu92=NAS4DUAL 06_util
+cmd92=cd z:\11_exaData\06_util
