--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -40,45 +40,45 @@
 
 
 [SearchName]
-0=typora
-1=RegistryWorkShop
-2=regis
-3=ddu
-4=DS_Store
-5=._
-6=html
-7=exe
-8=.netrc
-9=power
-10=launcher
-11=filemenu
-12=?꾩삤??
-13=ipython
-14=.bashrc
-15=debug
-16=profile
-17=run_profile_d*.*
-18=run_profile_d
-19=flow
+0=*.tab
+1=pdf
+2=require*
+3=far
+4=typora
+5=RegistryWorkShop
+6=regis
+7=ddu
+8=DS_Store
+9=._
+10=html
+11=exe
+12=.netrc
+13=power
+14=launcher
+15=filemenu
+16=?꾩삤??
+17=ipython
+18=.bashrc
+19=debug
 
 [SearchIn]
-0=d:\09_hardRain\08_ihanseol - 2023
+0=C:\Program Files\totalcmd
 1=d:\11_exaData\06_util
-2=C:\Program Files\totalcmd
-3=d:\11_exaData\06_util\010_ZZATURI
-4=z:\11_exaData
-5=F:\11_exaData\06_util
-6=f:\
-7=f:\11_exaData\06_util
-8=z:\11_exaData\06_util\010_ZZATURI\00_Internet
-9=z:\11_exaData\06_util
-10=d:\13_전주도장컴 자료
-11=d:\13_전주도장컴 자료\drive d\Temp
-12=d:\13_전주도장컴 자료\drive d
-13=d:\12_dev
-14=z:\11_exaData\04_dev
-15=y:\A1_exaVideo
-16=d:\02_Book
-17=z:\11_exaData\03_Design
-18=z:\11_exaData\05_OS
-19=z:\11_exaData\08_Microsoft Office
+2=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
+3=d:\09_hardRain\08_ihanseol - 2023
+4=d:\11_exaData\06_util\010_ZZATURI
+5=z:\11_exaData
+6=F:\11_exaData\06_util
+7=f:\
+8=f:\11_exaData\06_util
+9=z:\11_exaData\06_util\010_ZZATURI\00_Internet
+10=z:\11_exaData\06_util
+11=d:\13_전주도장컴 자료
+12=d:\13_전주도장컴 자료\drive d\Temp
+13=d:\13_전주도장컴 자료\drive d
+14=d:\12_dev
+15=z:\11_exaData\04_dev
+16=y:\A1_exaVideo
+17=d:\02_Book
+18=z:\11_exaData\03_Design
+19=z:\11_exaData\05_OS
