--- a/GHISLER/CONFIG/Shortcuts.ini
+++ b/GHISLER/CONFIG/Shortcuts.ini
@@ -49,8 +49,12 @@ CS+C=cm_CopyFullNamesToClip
 CA+C=cm_CopySrcPathToClip
 
 ; FastCopy 
-CA+F5=em_FastCopy
-CA+F6=em_FastMove
+;CA+F5=em_FastCopy
+;CA+F6=em_FastMove
+CA+F5=em_TeraCopy
+CA+F6=em_FeraMove
+
+
 
 ; TextSearch from file
 CA+F=em_AgentRanSack
