--- a/GHISLER/WINCMD.INI
+++ b/GHISLER/WINCMD.INI
@@ -2,6 +2,7 @@
 UseIniInProgramDir=7
 RedirectSection=CONFIG/Configuration.ini
 Mainmenu=wcmd_eng.mnu
+Editor=%COMMANDER_PATH%\plugins\utils\util_OpenFileTC_1.8c\OpenFileTC.exe
 
 [ButtonbarCache]
 RedirectSection=CONFIG/ButtonbarCache.ini
