--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -4,17 +4,42 @@ param=%P
 button=%commander_path%\TCqsp\TCqsp.exe
 menu=Quick filter
 
+;*******************************************************************************************************************************************
+
 [em_FastCopy]
-button=C:\Program Files\totalcmd\RunAsTool\FastCopy4.2.1_x64\FastCopy.exe
-cmd=c:\Program Files\totalcmd\RunAsTool\FastCopy4.2.1_x64\FastCopy.exe  /auto_close /open_window  /cmd=update /estimate
+button=C:\Program Files\totalcmd\RunAsTool\FastCopy\FastCopy.exe
+cmd=c:\Program Files\totalcmd\RunAsTool\FastCopy\FastCopy.exe  /auto_close /open_window  /cmd=update /cmd=noexist_only /estimate
 param=%P%S /to="%T"
 menu=FastCopy
 
 [em_FastMove]
-button=C:\Program Files\totalcmd\RunAsTool\FastCopy4.2.1_x64\FastCopy.exe,6
-cmd=c:\Program Files\totalcmd\RunAsTool\FastCopy4.2.1_x64\FastCopy.exe /auto_close /open_window /cmd=move /estimate
+button=C:\Program Files\totalcmd\RunAsTool\FastCopy\FastCopy.exe,6
+cmd=c:\Program Files\totalcmd\RunAsTool\FastCopy\FastCopy.exe /auto_close /open_window /cmd=move /cmd=noexist_only /estimate
 param=%P%S /to="%T"
 menu=FastMove
+
+[em_TeraMove]
+cmd=c:\Program Files\TeraCopy\TeraCopy.exe
+param=Move *"%L" "%T"
+menu=tera move
+button=c:\Program Files\TeraCopy\TeraCopy.exe,1
+
+[em_TeraDel]
+cmd=c:\Program Files\TeraCopy\TeraCopy.exe
+param=Delete *"%L"
+menu=tera del
+button=c:\Program Files\TeraCopy\TeraCopy.exe,2
+
+[em_TeraCopy]
+cmd=c:\Program Files\TeraCopy\TeraCopy.exe
+param=Copy *"%L" "%T"
+menu=tera copy
+button=c:\Program Files\TeraCopy\TeraCopy.exe
+
+;*******************************************************************************************************************************************
+
+
+
 
 
 [em_gitBash]
@@ -176,3 +201,8 @@ path=%commander_path%\tools
 cmd=NirCMD qboxcomtop "Is it certain?" "waiting table" standby
 menu=Standby
 path=%commander_path%\tools
+
+
+[em_OpenTabsForSync]
+cmd=OPENTABS %commander_path%\Tabs\SyncUtils.tab
+
