--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,7 +1,7 @@
 
 [left]
-path=d:\05_Send\
-ViewMode=0
+path=C:\Program Files\totalcmd\plugins\utils\util_tcer\
+ViewMode=-1
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -15,8 +15,8 @@ sortorder=0
 
 
 [right]
-path=d:\09_hardRain\08_ihanseol - 2023\
-ViewMode=0
+path=d:\12_dev\04_PyhtonDemoDojang\10_SyncSubtitles\
+ViewMode=-1
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -54,6 +54,9 @@ XPstyle=1
 
 
 
+
+
+
 [lefttabs]
 0_path=c:\Users\minhwasoo\Desktop\
 0_options=1|0|0|0|0|1|0|
@@ -65,11 +68,9 @@ XPstyle=1
 3_options=1|0|0|0|0|1|0|
 4_path=d:\11_exaData\06_util\
 4_options=1|0|0|0|0|1|0|
-activetab=5
-activelocked=1
-
-
-
+5_path=d:\05_Send\
+5_options=1|0|0|0|0|1|0|
+activetab=6
 [righttabs]
 0_path=d:\11_exaData\06_util\
 0_options=1|0|0|0|0|1|0|
@@ -77,5 +78,8 @@ activelocked=1
 1_options=1|0|0|0|0|1|0|
 2_path=c:\Users\minhwasoo\Downloads\
 2_options=1|0|0|0|0|1|0|
-activetab=3
-activelocked=1
+3_path=d:\09_hardRain\08_ihanseol - 2023\
+3_options=1|0|0|0|0|1|0|
+4_path=c:\Users\minhwasoo\Downloads\
+4_options=1|0|0|0|0|0|0|
+activetab=4
