--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -111,6 +111,13 @@ cmd=C:\Program Files\Sublime Text\subl.exe
 param=-a "%P"
 menu=Open SublimeText
 
+[em_VsCode]
+button=c:\Users\minhwasoo\AppData\Local\Programs\Microsoft VS Code\Code.exe
+cmd=c:\Users\minhwasoo\AppData\Local\Programs\Microsoft VS Code\Code.exe
+param=%n
+menu=Open VsCode
+
+
 [em_everything]
 button=c:\Program Files\Everything\Everything.exe
 cmd=c:\Program Files\Everything\Everything.exe
