--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -40,132 +40,134 @@ menu21=totalcmd
 cmd21=cd C:\Program Files\totalcmd
 menu22=plugins , totalcommander
 cmd22=cd %COMMANDER_PATH%\plugins
-menu23=Total Commander ini
-cmd23=cd %COMMANDER_PATH%\ini
-menu24=totalcmd - ini - config
-cmd24=cd %COMMANDER_PATH%\ini\config
-menu25=Dos Batch File Example
-cmd25=cd %COMMANDER_PATH%\ini\config\Dos Batch File Example
-menu26=ini for minhwasoo
-cmd26=cd %COMMANDER_PATH%\ini\01_wincmd.ini\minhwasoo
-menu27=inside TotalCmd GHISLER
-cmd27=cd %COMMANDER_PATH%\ini\GHISLER
-menu28=icons dll
-cmd28=cd %COMMANDER_PATH%\ini\icons dll
-menu29=RunAsTool
-cmd29=cd %COMMANDER_PATH%\RunAsTool
-menu30=98_Sordum
-cmd30=cd %COMMANDER_PATH%\RunAsTool\98_Sordum
-menu31=99_NirSoft
-cmd31=cd %COMMANDER_PATH%\RunAsTool\99_NirSoft
-menu32=cmder config
-cmd32=cd %COMMANDER_PATH%\RunAsTool\cmder\config
-menu33=--
-menu34=-ExaData
-menu35=11_exaData
-cmd35=cd d:\11_exaData
-menu36=05_WSH
-cmd36=cd d:\11_exaData\05_OS\05_WSH
-menu37=05_OS
-cmd37=cd d:\11_exaData\05_OS
-menu38=06_Utility
-cmd38=cd d:\11_exaData\06_util
-menu39=016_Dev Tool
-cmd39=cd d:\11_exaData\06_util\016_dev tool
-menu40=010_ZZATURI
-cmd40=cd d:\11_exaData\06_util\010_ZZATURI
-menu41=01_Test Program
-cmd41=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
-menu42=12_BAT_FFMPEG
-cmd42=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
-menu43=10_cmder
-cmd43=cd d:\11_exaData\06_util\099_Game\10_cmder
-menu44=099_Game
-cmd44=cd d:\11_exaData\06_util\099_Game
-menu45=00_Program Data
-cmd45=cd d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\00_Program Data
-menu46=--
-menu47="-hardrain , Ground Water Report "
-menu48=04_Reference Data
-cmd48=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
-menu49=11_JungCheon Photo by Season
-cmd49=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
-menu50=07_LandSlide
-cmd50=cd d:\12_dev\02_Excel\07_LandSlide
-menu51=05_ihanseol - 2020
-cmd51=cd d:\09_hardRain\05_ihanseol - 2020
-menu52=06_ihanseol - 2021
-cmd52=cd d:\09_hardRain\06_ihanseol - 2021
-menu53=07_ihanseol - 2022
-cmd53=cd d:\09_hardRain\07_ihanseol - 2022
-menu54=08_ihanseol - 2023
-cmd54=cd d:\09_hardRain\08_ihanseol - 2023
-menu55=--
-menu56=-WSL2
-menu57=WSL LocalState EXT4
-cmd57=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
-menu58=WSL minhwasoo
-cmd58=cd a:\home\minhwasoo
-menu59=--
-menu60=-Git Bash
-menu61=Git
-cmd61=cd C:\Program Files\Git
-menu62=gitbash /usr/bin
-cmd62=cd C:\Program Files\Git\usr\bin
-menu63=gitbash - mingw64 - bin
-cmd63=cd C:\Program Files\Git\mingw64\bin
-menu64=gitbvash - mingw64 - git-core
-cmd64=cd C:\Program Files\Git\mingw64\libexec\git-core
-menu65=gitbash - mergetools
-cmd65=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
-menu66=--
-menu67=-Appdata and Local
-menu68=d:/12_dev/  Action and Configuration
-cmd68=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
-menu69=Sublime Installed Packages
-cmd69=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
-menu70=Sublime Packages
-cmd70=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
-menu71=Sublime Packages User
-cmd71=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
-menu72=FlowLauncher CustomIcons
-cmd72=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu73=Bing WPImages
-cmd73=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
-menu74=AppData Local
-cmd74=cd C:\Users\minhwasoo\AppData\Local
-menu75=AddData Roaming
-cmd75=cd C:\Users\minhwasoo\AppData\Roaming
-menu76=WindowsTerminal Setting
-cmd76=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
-menu77=ProgramData
-cmd77=cd C:\ProgramData
-menu78=--
-menu79=00_Emule
-cmd79=cd C:\ProgramData\00_Emule
-menu80=02_ROMS
-cmd80=cd d:\11_exaData\10_Game\02_ROMS
-menu81=03_download
-cmd81=cd d:\03_download
-menu82=03_my_script
-cmd82=cd d:\12_dev\03_visual_lisp\03_my_script
-menu83=02_Book
-cmd83=cd d:\02_Book
-menu84=08_나의작업
-cmd84=cd d:\08_나의작업\
-menu85=04_mp3
-cmd85=cd d:\04_mp3
-menu86=05_Send
-cmd86=cd d:\05_Send
-menu87=06_Send2
-cmd87=cd d:\06_Send2
-menu88=12_dev
-cmd88=cd d:\12_dev
-menu89=C:_Temp
-cmd89=cd c:\Temp
-menu90=e: download
-cmd90=cd e:\download
-menu91=Bing
-cmd91=cd d:\10_photo\Desktop Pictures\bing
-menu92=NAS4DUAL 06_util
-cmd92=cd z:\11_exaData\06_util
+menu23=util_tcer
+cmd23=cd %COMMANDER_PATH%\plugins\utils\util_tcer
+menu24=Total Commander ini
+cmd24=cd %COMMANDER_PATH%\ini
+menu25=totalcmd - ini - config
+cmd25=cd %COMMANDER_PATH%\ini\config
+menu26=Dos Batch File Example
+cmd26=cd %COMMANDER_PATH%\ini\config\Dos Batch File Example
+menu27=ini for minhwasoo
+cmd27=cd %COMMANDER_PATH%\ini\01_wincmd.ini\minhwasoo
+menu28=inside TotalCmd GHISLER
+cmd28=cd %COMMANDER_PATH%\ini\GHISLER
+menu29=icons dll
+cmd29=cd %COMMANDER_PATH%\ini\icons dll
+menu30=RunAsTool
+cmd30=cd %COMMANDER_PATH%\RunAsTool
+menu31=98_Sordum
+cmd31=cd %COMMANDER_PATH%\RunAsTool\98_Sordum
+menu32=99_NirSoft
+cmd32=cd %COMMANDER_PATH%\RunAsTool\99_NirSoft
+menu33=cmder config
+cmd33=cd %COMMANDER_PATH%\RunAsTool\cmder\config
+menu34=--
+menu35=-ExaData
+menu36=11_exaData
+cmd36=cd d:\11_exaData
+menu37=05_WSH
+cmd37=cd d:\11_exaData\05_OS\05_WSH
+menu38=05_OS
+cmd38=cd d:\11_exaData\05_OS
+menu39=06_Utility
+cmd39=cd d:\11_exaData\06_util
+menu40=016_Dev Tool
+cmd40=cd d:\11_exaData\06_util\016_dev tool
+menu41=010_ZZATURI
+cmd41=cd d:\11_exaData\06_util\010_ZZATURI
+menu42=01_Test Program
+cmd42=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
+menu43=12_BAT_FFMPEG
+cmd43=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
+menu44=10_cmder
+cmd44=cd d:\11_exaData\06_util\099_Game\10_cmder
+menu45=099_Game
+cmd45=cd d:\11_exaData\06_util\099_Game
+menu46=00_Program Data
+cmd46=cd d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\00_Program Data
+menu47=--
+menu48="-hardrain , Ground Water Report "
+menu49=04_Reference Data
+cmd49=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
+menu50=11_JungCheon Photo by Season
+cmd50=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
+menu51=07_LandSlide
+cmd51=cd d:\12_dev\02_Excel\07_LandSlide
+menu52=05_ihanseol - 2020
+cmd52=cd d:\09_hardRain\05_ihanseol - 2020
+menu53=06_ihanseol - 2021
+cmd53=cd d:\09_hardRain\06_ihanseol - 2021
+menu54=07_ihanseol - 2022
+cmd54=cd d:\09_hardRain\07_ihanseol - 2022
+menu55=08_ihanseol - 2023
+cmd55=cd d:\09_hardRain\08_ihanseol - 2023
+menu56=--
+menu57=-WSL2
+menu58=WSL LocalState EXT4
+cmd58=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
+menu59=WSL minhwasoo
+cmd59=cd a:\home\minhwasoo
+menu60=--
+menu61=-Git Bash
+menu62=Git
+cmd62=cd C:\Program Files\Git
+menu63=gitbash /usr/bin
+cmd63=cd C:\Program Files\Git\usr\bin
+menu64=gitbash - mingw64 - bin
+cmd64=cd C:\Program Files\Git\mingw64\bin
+menu65=gitbvash - mingw64 - git-core
+cmd65=cd C:\Program Files\Git\mingw64\libexec\git-core
+menu66=gitbash - mergetools
+cmd66=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
+menu67=--
+menu68=-Appdata and Local
+menu69=d:/12_dev/  Action and Configuration
+cmd69=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
+menu70=Sublime Installed Packages
+cmd70=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
+menu71=Sublime Packages
+cmd71=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
+menu72=Sublime Packages User
+cmd72=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
+menu73=FlowLauncher CustomIcons
+cmd73=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
+menu74=Bing WPImages
+cmd74=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
+menu75=AppData Local
+cmd75=cd C:\Users\minhwasoo\AppData\Local
+menu76=AddData Roaming
+cmd76=cd C:\Users\minhwasoo\AppData\Roaming
+menu77=WindowsTerminal Setting
+cmd77=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
+menu78=ProgramData
+cmd78=cd C:\ProgramData
+menu79=--
+menu80=00_Emule
+cmd80=cd C:\ProgramData\00_Emule
+menu81=02_ROMS
+cmd81=cd d:\11_exaData\10_Game\02_ROMS
+menu82=03_download
+cmd82=cd d:\03_download
+menu83=03_my_script
+cmd83=cd d:\12_dev\03_visual_lisp\03_my_script
+menu84=02_Book
+cmd84=cd d:\02_Book
+menu85=08_나의작업
+cmd85=cd d:\08_나의작업\
+menu86=04_mp3
+cmd86=cd d:\04_mp3
+menu87=05_Send
+cmd87=cd d:\05_Send
+menu88=06_Send2
+cmd88=cd d:\06_Send2
+menu89=12_dev
+cmd89=cd d:\12_dev
+menu90=C:_Temp
+cmd90=cd c:\Temp
+menu91=e: download
+cmd91=cd e:\download
+menu92=Bing
+cmd92=cd d:\10_photo\Desktop Pictures\bing
+menu93=NAS4DUAL 06_util
+cmd93=cd z:\11_exaData\06_util
