--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -40,45 +40,45 @@
 
 
 [SearchName]
-0=*.tab
-1=pdf
-2=require*
-3=far
-4=typora
-5=RegistryWorkShop
-6=regis
-7=ddu
-8=DS_Store
-9=._
-10=html
-11=exe
-12=.netrc
-13=power
-14=launcher
-15=filemenu
-16=?꾩삤??
-17=ipython
-18=.bashrc
-19=debug
+0=사진대지
+1=*.tab
+2=pdf
+3=require*
+4=far
+5=typora
+6=RegistryWorkShop
+7=regis
+8=ddu
+9=DS_Store
+10=._
+11=html
+12=exe
+13=.netrc
+14=power
+15=launcher
+16=filemenu
+17=?꾩삤??
+18=ipython
+19=.bashrc
 
 [SearchIn]
-0=C:\Program Files\totalcmd
-1=d:\11_exaData\06_util
-2=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
-3=d:\09_hardRain\08_ihanseol - 2023
-4=d:\11_exaData\06_util\010_ZZATURI
-5=z:\11_exaData
-6=F:\11_exaData\06_util
-7=f:\
-8=f:\11_exaData\06_util
-9=z:\11_exaData\06_util\010_ZZATURI\00_Internet
-10=z:\11_exaData\06_util
-11=d:\13_전주도장컴 자료
-12=d:\13_전주도장컴 자료\drive d\Temp
-13=d:\13_전주도장컴 자료\drive d
-14=d:\12_dev
-15=z:\11_exaData\04_dev
-16=y:\A1_exaVideo
-17=d:\02_Book
-18=z:\11_exaData\03_Design
-19=z:\11_exaData\05_OS
+0=d:\09_hardRain
+1=C:\Program Files\totalcmd
+2=d:\11_exaData\06_util
+3=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
+4=d:\09_hardRain\08_ihanseol - 2023
+5=d:\11_exaData\06_util\010_ZZATURI
+6=z:\11_exaData
+7=F:\11_exaData\06_util
+8=f:\
+9=f:\11_exaData\06_util
+10=z:\11_exaData\06_util\010_ZZATURI\00_Internet
+11=z:\11_exaData\06_util
+12=d:\13_전주도장컴 자료
+13=d:\13_전주도장컴 자료\drive d\Temp
+14=d:\13_전주도장컴 자료\drive d
+15=d:\12_dev
+16=z:\11_exaData\04_dev
+17=y:\A1_exaVideo
+18=d:\02_Book
+19=z:\11_exaData\03_Design
