--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -38,10 +38,6 @@ button=c:\Program Files\TeraCopy\TeraCopy.exe
 
 ;*******************************************************************************************************************************************
 
-
-
-
-
 [em_gitBash]
 button=C:\Program Files\Git\git-bash.exe
 cmd=C:\Program Files\Git\git-bash.exe
@@ -85,12 +81,28 @@ button=c:\Users\minhwasoo\AppData\Local\Microsoft\WindowsApps\wt.exe
 cmd=c:\Users\minhwasoo\AppData\Local\Microsoft\WindowsApps\wt.exe
 menu=Open Windows Terminal
 
+;*******************************************************************************************************************************************
 
 [em_Gvim]
 button=C:\Program Files\Vim\vim90\gvim.exe
 cmd=c:\Program Files\Vim\vim90\gvim.exe
 param=%n
 menu=open file in gvim
+
+[em_sublime]
+button=C:\Program Files\Sublime Text\sublime_text.exe
+cmd=C:\Program Files\Sublime Text\subl.exe
+;param=-a "%P"
+param=%n
+menu=Open SublimeText
+
+[em_VsCode]
+button=c:\Users\minhwasoo\AppData\Local\Programs\Microsoft VS Code\Code.exe
+cmd=c:\Users\minhwasoo\AppData\Local\Programs\Microsoft VS Code\Code.exe
+param=%n
+menu=Open VsCode
+
+;*******************************************************************************************************************************************
 
 [em_AgentRanSack]
 button=c:\Program Files\Mythicsoft\Agent Ransack\AgentRansack.exe
@@ -103,20 +115,6 @@ button=c:\Program Files\totalcmd\RunAsTool\98_Sordum\GrepWin\grepWin-x64-2.0.13_
 cmd=c:\Program Files\totalcmd\RunAsTool\98_Sordum\GrepWin\grepWin-x64-2.0.13_portable.exe
 param=%p
 menu=Grep for Windows
-
-
-[em_sublime]
-button=C:\Program Files\Sublime Text\sublime_text.exe
-cmd=C:\Program Files\Sublime Text\subl.exe
-param=-a "%P"
-menu=Open SublimeText
-
-[em_VsCode]
-button=c:\Users\minhwasoo\AppData\Local\Programs\Microsoft VS Code\Code.exe
-cmd=c:\Users\minhwasoo\AppData\Local\Programs\Microsoft VS Code\Code.exe
-param=%n
-menu=Open VsCode
-
 
 [em_everything]
 button=c:\Program Files\Everything\Everything.exe
