--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -40,45 +40,45 @@
 
 
 [SearchName]
-0=사진대지
-1=*.tab
-2=pdf
-3=require*
-4=far
-5=typora
-6=RegistryWorkShop
-7=regis
-8=ddu
-9=DS_Store
-10=._
-11=html
-12=exe
-13=.netrc
-14=power
-15=launcher
-16=filemenu
-17=?꾩삤??
-18=ipython
-19=.bashrc
+0=*.aqt
+1=aqtw*.exe
+2=aqu*.exe
+3=aqutesolv
+4=emf
+5=사진대지
+6=*.tab
+7=pdf
+8=require*
+9=far
+10=typora
+11=RegistryWorkShop
+12=regis
+13=ddu
+14=DS_Store
+15=._
+16=html
+17=exe
+18=.netrc
+19=power
 
 [SearchIn]
-0=d:\09_hardRain
-1=C:\Program Files\totalcmd
-2=d:\11_exaData\06_util
-3=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
-4=d:\09_hardRain\08_ihanseol - 2023
-5=d:\11_exaData\06_util\010_ZZATURI
-6=z:\11_exaData
-7=F:\11_exaData\06_util
-8=f:\
-9=f:\11_exaData\06_util
-10=z:\11_exaData\06_util\010_ZZATURI\00_Internet
-11=z:\11_exaData\06_util
-12=d:\13_전주도장컴 자료
-13=d:\13_전주도장컴 자료\drive d\Temp
-14=d:\13_전주도장컴 자료\drive d
-15=d:\12_dev
-16=z:\11_exaData\04_dev
-17=y:\A1_exaVideo
-18=d:\02_Book
-19=z:\11_exaData\03_Design
+0=d:\09_hardRain\01_2017
+1=d:\09_hardRain
+2=C:\Program Files\totalcmd
+3=d:\11_exaData\06_util
+4=d:\12_dev\99_Etc\illustrator-scripting-guide\docs
+5=d:\09_hardRain\08_ihanseol - 2023
+6=d:\11_exaData\06_util\010_ZZATURI
+7=z:\11_exaData
+8=F:\11_exaData\06_util
+9=f:\
+10=f:\11_exaData\06_util
+11=z:\11_exaData\06_util\010_ZZATURI\00_Internet
+12=z:\11_exaData\06_util
+13=d:\13_전주도장컴 자료
+14=d:\13_전주도장컴 자료\drive d\Temp
+15=d:\13_전주도장컴 자료\drive d
+16=d:\12_dev
+17=z:\11_exaData\04_dev
+18=y:\A1_exaVideo
+19=d:\02_Book
