--- a/GHISLER/CONFIG/Shortcuts.ini
+++ b/GHISLER/CONFIG/Shortcuts.ini
@@ -48,6 +48,7 @@ CA+E=em_everything
 ; Copy Path to Clipboard
 CS+C=cm_CopyFullNamesToClip
 CA+C=cm_CopySrcPathToClip
+CA+D=cm_FileSync
 
 ; FastCopy 
 ;CA+F5=em_FastCopy
