--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -44,130 +44,134 @@ menu23=util_tcer
 cmd23=cd %COMMANDER_PATH%\plugins\utils\util_tcer
 menu24=Total Commander ini
 cmd24=cd %COMMANDER_PATH%\ini
-menu25=totalcmd - ini - config
-cmd25=cd %COMMANDER_PATH%\ini\config
-menu26=Dos Batch File Example
-cmd26=cd %COMMANDER_PATH%\ini\config\Dos Batch File Example
-menu27=ini for minhwasoo
-cmd27=cd %COMMANDER_PATH%\ini\01_wincmd.ini\minhwasoo
-menu28=inside TotalCmd GHISLER
-cmd28=cd %COMMANDER_PATH%\ini\GHISLER
-menu29=icons dll
-cmd29=cd %COMMANDER_PATH%\ini\icons dll
-menu30=RunAsTool
-cmd30=cd %COMMANDER_PATH%\RunAsTool
-menu31=98_Sordum
-cmd31=cd %COMMANDER_PATH%\RunAsTool\98_Sordum
-menu32=99_NirSoft
-cmd32=cd %COMMANDER_PATH%\RunAsTool\99_NirSoft
-menu33=cmder config
-cmd33=cd %COMMANDER_PATH%\RunAsTool\cmder\config
-menu34=--
-menu35=-ExaData
-menu36=11_exaData
-cmd36=cd d:\11_exaData
-menu37=05_WSH
-cmd37=cd d:\11_exaData\05_OS\05_WSH
-menu38=05_OS
-cmd38=cd d:\11_exaData\05_OS
-menu39=06_Utility
-cmd39=cd d:\11_exaData\06_util
-menu40=016_Dev Tool
-cmd40=cd d:\11_exaData\06_util\016_dev tool
-menu41=010_ZZATURI
-cmd41=cd d:\11_exaData\06_util\010_ZZATURI
-menu42=01_Test Program
-cmd42=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
-menu43=12_BAT_FFMPEG
-cmd43=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
-menu44=10_cmder
-cmd44=cd d:\11_exaData\06_util\099_Game\10_cmder
-menu45=099_Game
-cmd45=cd d:\11_exaData\06_util\099_Game
-menu46=00_Program Data
-cmd46=cd d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\00_Program Data
-menu47=--
-menu48="-hardrain , Ground Water Report "
-menu49=04_Reference Data
-cmd49=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
-menu50=11_JungCheon Photo by Season
-cmd50=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
-menu51=07_LandSlide
-cmd51=cd d:\12_dev\02_Excel\07_LandSlide
-menu52=05_ihanseol - 2020
-cmd52=cd d:\09_hardRain\05_ihanseol - 2020
-menu53=06_ihanseol - 2021
-cmd53=cd d:\09_hardRain\06_ihanseol - 2021
-menu54=07_ihanseol - 2022
-cmd54=cd d:\09_hardRain\07_ihanseol - 2022
-menu55=08_ihanseol - 2023
-cmd55=cd d:\09_hardRain\08_ihanseol - 2023
-menu56=--
-menu57=-WSL2
-menu58=WSL LocalState EXT4
-cmd58=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
-menu59=WSL minhwasoo
-cmd59=cd a:\home\minhwasoo
-menu60=--
-menu61=-Git Bash
-menu62=Git
-cmd62=cd C:\Program Files\Git
-menu63=gitbash /usr/bin
-cmd63=cd C:\Program Files\Git\usr\bin
-menu64=gitbash - mingw64 - bin
-cmd64=cd C:\Program Files\Git\mingw64\bin
-menu65=gitbvash - mingw64 - git-core
-cmd65=cd C:\Program Files\Git\mingw64\libexec\git-core
-menu66=gitbash - mergetools
-cmd66=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
-menu67=--
-menu68=-Appdata and Local
-menu69=d:/12_dev/  Action and Configuration
-cmd69=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
-menu70=Sublime Installed Packages
-cmd70=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
-menu71=Sublime Packages
-cmd71=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
-menu72=Sublime Packages User
-cmd72=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
-menu73=FlowLauncher CustomIcons
-cmd73=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu74=Bing WPImages
-cmd74=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
-menu75=AppData Local
-cmd75=cd C:\Users\minhwasoo\AppData\Local
-menu76=AddData Roaming
-cmd76=cd C:\Users\minhwasoo\AppData\Roaming
-menu77=WindowsTerminal Setting
-cmd77=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
-menu78=ProgramData
-cmd78=cd C:\ProgramData
-menu79=--
-menu80=00_Emule
-cmd80=cd C:\ProgramData\00_Emule
-menu81=02_ROMS
-cmd81=cd d:\11_exaData\10_Game\02_ROMS
-menu82=03_download
-cmd82=cd d:\03_download
-menu83=03_my_script
-cmd83=cd d:\12_dev\03_visual_lisp\03_my_script
-menu84=02_Book
-cmd84=cd d:\02_Book
-menu85=08_나의작업
-cmd85=cd d:\08_나의작업\
-menu86=04_mp3
-cmd86=cd d:\04_mp3
-menu87=05_Send
-cmd87=cd d:\05_Send
-menu88=06_Send2
-cmd88=cd d:\06_Send2
-menu89=12_dev
-cmd89=cd d:\12_dev
-menu90=C:_Temp
-cmd90=cd c:\Temp
-menu91=e: download
-cmd91=cd e:\download
-menu92=Bing
-cmd92=cd d:\10_photo\Desktop Pictures\bing
-menu93=NAS4DUAL 06_util
-cmd93=cd z:\11_exaData\06_util
+menu25=ini --> 02_python
+cmd25=cd %COMMANDER_PATH%\ini\02_python
+menu26=ini --> config
+cmd26=cd %COMMANDER_PATH%\ini\config
+menu27=ini --> config --> Dos Batch File Example
+cmd27=cd %COMMANDER_PATH%\ini\config\Dos Batch File Example
+menu28=ini --> 01_wincmd.ini --> minhwasoo
+cmd28=cd %COMMANDER_PATH%\ini\01_wincmd.ini\minhwasoo
+menu29=ini --> GHISLER
+cmd29=cd %COMMANDER_PATH%\ini\GHISLER
+menu30=ini --> icons_dll
+cmd30=cd %COMMANDER_PATH%\ini\icons dll
+menu31=RunAsTool
+cmd31=cd %COMMANDER_PATH%\RunAsTool
+menu32=98_Sordum
+cmd32=cd %COMMANDER_PATH%\RunAsTool\98_Sordum
+menu33=99_NirSoft
+cmd33=cd %COMMANDER_PATH%\RunAsTool\99_NirSoft
+menu34=cmder config
+cmd34=cd %COMMANDER_PATH%\RunAsTool\cmder\config
+menu35=--
+menu36=-ExaData
+menu37=11_exaData
+cmd37=cd d:\11_exaData
+menu38=05_WSH
+cmd38=cd d:\11_exaData\05_OS\05_WSH
+menu39=05_OS
+cmd39=cd d:\11_exaData\05_OS
+menu40=06_Utility
+cmd40=cd d:\11_exaData\06_util
+menu41=016_Dev Tool
+cmd41=cd d:\11_exaData\06_util\016_dev tool
+menu42=010_ZZATURI
+cmd42=cd d:\11_exaData\06_util\010_ZZATURI
+menu43=01_Test Program
+cmd43=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
+menu44=12_BAT_FFMPEG
+cmd44=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
+menu45=10_cmder
+cmd45=cd d:\11_exaData\06_util\099_Game\10_cmder
+menu46=099_Game
+cmd46=cd d:\11_exaData\06_util\099_Game
+menu47=00_Program Data
+cmd47=cd d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\00_Program Data
+menu48=--
+menu49=-HardRain, Report
+menu50=WHPA
+cmd50=cd c:\WHPA
+menu51=04_Reference Data
+cmd51=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
+menu52=11_JungCheon Photo by Season
+cmd52=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
+menu53=07_LandSlide
+cmd53=cd d:\12_dev\02_Excel\07_LandSlide
+menu54=05_ihanseol - 2020
+cmd54=cd d:\09_hardRain\05_ihanseol - 2020
+menu55=06_ihanseol - 2021
+cmd55=cd d:\09_hardRain\06_ihanseol - 2021
+menu56=07_ihanseol - 2022
+cmd56=cd d:\09_hardRain\07_ihanseol - 2022
+menu57=08_ihanseol - 2023
+cmd57=cd d:\09_hardRain\08_ihanseol - 2023
+menu58=--
+menu59=-WSL2
+menu60=WSL LocalState EXT4
+cmd60=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
+menu61=WSL minhwasoo
+cmd61=cd a:\home\minhwasoo
+menu62=--
+menu63=-Git Bash
+menu64=Git
+cmd64=cd C:\Program Files\Git
+menu65=gitbash /usr/bin
+cmd65=cd C:\Program Files\Git\usr\bin
+menu66=gitbash - mingw64 - bin
+cmd66=cd C:\Program Files\Git\mingw64\bin
+menu67=gitbvash - mingw64 - git-core
+cmd67=cd C:\Program Files\Git\mingw64\libexec\git-core
+menu68=gitbash - mergetools
+cmd68=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
+menu69=--
+menu70=-Appdata and Local
+menu71=d:/12_dev/  Action and Configuration
+cmd71=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
+menu72=Sublime Installed Packages
+cmd72=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
+menu73=Sublime Packages
+cmd73=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
+menu74=Sublime Packages User
+cmd74=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
+menu75=FlowLauncher CustomIcons
+cmd75=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
+menu76=Bing WPImages
+cmd76=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
+menu77=AppData Local
+cmd77=cd C:\Users\minhwasoo\AppData\Local
+menu78=AddData Roaming
+cmd78=cd C:\Users\minhwasoo\AppData\Roaming
+menu79=WindowsTerminal Setting
+cmd79=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
+menu80=ProgramData
+cmd80=cd C:\ProgramData
+menu81=--
+menu82=00_Emule
+cmd82=cd C:\ProgramData\00_Emule
+menu83=02_ROMS
+cmd83=cd d:\11_exaData\10_Game\02_ROMS
+menu84=03_download
+cmd84=cd d:\03_download
+menu85=03_my_script
+cmd85=cd d:\12_dev\03_visual_lisp\03_my_script
+menu86=02_Book
+cmd86=cd d:\02_Book
+menu87=08_나의작업
+cmd87=cd d:\08_나의작업\
+menu88=04_mp3
+cmd88=cd d:\04_mp3
+menu89=05_Send
+cmd89=cd d:\05_Send
+menu90=06_Send2
+cmd90=cd d:\06_Send2
+menu91=12_dev
+cmd91=cd d:\12_dev
+menu92=C:_Temp
+cmd92=cd c:\Temp
+menu93=e: download
+cmd93=cd e:\download
+menu94=Bing
+cmd94=cd d:\10_photo\Desktop Pictures\bing
+menu95=NAS4DUAL 06_util
+cmd95=cd z:\11_exaData\06_util
