--- a/GHISLER/CONFIG/Selection.ini
+++ b/GHISLER/CONFIG/Selection.ini
@@ -1,22 +1,21 @@
 [Selection]
-0=*.zip
-1=*.*
-2=*.flac
-3=*.wav
-4=*.jpg
-5=*.mp3
-6=*.xml
-7=*,xml
-8=*.smi
-9=*.ttf
-10=*.txt
-11=*.otf
-12=*.png
-13=*.bar
-14=*.ico
-15=*.icl
-16=|*\
-17=|*
-18=*.mun
-19=*.dll
-20=*.exe
+0=*.pdf
+1=*.jpg
+2=*.*
+3=*.zip
+4=*.flac
+5=*.wav
+6=*.mp3
+7=*.xml
+8=*,xml
+9=*.smi
+10=*.ttf
+11=*.txt
+12=*.otf
+13=*.png
+14=*.bar
+15=*.ico
+16=*.icl
+17=|*\
+18=|*
+19=*.mun
