--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -147,31 +147,33 @@ cmd79=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8we
 menu80=ProgramData
 cmd80=cd C:\ProgramData
 menu81=--
-menu82=00_Emule
-cmd82=cd C:\ProgramData\00_Emule
-menu83=02_ROMS
-cmd83=cd d:\11_exaData\10_Game\02_ROMS
-menu84=03_download
-cmd84=cd d:\03_download
-menu85=03_my_script
-cmd85=cd d:\12_dev\03_visual_lisp\03_my_script
-menu86=02_Book
-cmd86=cd d:\02_Book
-menu87=08_나의작업
-cmd87=cd d:\08_나의작업\
-menu88=04_mp3
-cmd88=cd d:\04_mp3
-menu89=05_Send
-cmd89=cd d:\05_Send
-menu90=06_Send2
-cmd90=cd d:\06_Send2
-menu91=12_dev
-cmd91=cd d:\12_dev
-menu92=C:_Temp
-cmd92=cd c:\Temp
-menu93=e: download
-cmd93=cd e:\download
-menu94=Bing
-cmd94=cd d:\10_photo\Desktop Pictures\bing
-menu95=NAS4DUAL 06_util
-cmd95=cd z:\11_exaData\06_util
+menu82=-12_dev --> excel
+menu83=02_Excel2 --> 01_Acquifer Pumping Test
+cmd83=cd d:\12_dev\02_Excel2\01_Acquifer Pumping Test
+menu84=--
+menu85=02_ROMS
+cmd85=cd d:\11_exaData\10_Game\02_ROMS
+menu86=00_Emule
+cmd86=cd C:\ProgramData\00_Emule
+menu87=03_download
+cmd87=cd d:\03_download
+menu88=03_my_script
+cmd88=cd d:\12_dev\03_visual_lisp\03_my_script
+menu89=02_Book
+cmd89=cd d:\02_Book
+menu90=08_나의작업
+cmd90=cd d:\08_나의작업\
+menu91=04_mp3
+cmd91=cd d:\04_mp3
+menu92=05_Send
+cmd92=cd d:\05_Send
+menu93=06_Send2
+cmd93=cd d:\06_Send2
+menu94=C:_Temp
+cmd94=cd c:\Temp
+menu95=e: download
+cmd95=cd e:\download
+menu96=Bing
+cmd96=cd d:\10_photo\Desktop Pictures\bing
+menu97=NAS4DUAL 06_util
+cmd97=cd z:\11_exaData\06_util
