--- a/GHISLER/CONFIG/LeftRight.ini
+++ b/GHISLER/CONFIG/LeftRight.ini
@@ -1,7 +1,7 @@
 
 [left]
-path=C:\Program Files\totalcmd\ini\
-ViewMode=-1
+path=d:\05_Send\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 ShowAllDetails=1
@@ -68,9 +68,8 @@ XPstyle=1
 3_options=1|0|0|0|0|1|0|
 4_path=d:\11_exaData\06_util\
 4_options=1|0|0|0|0|1|0|
-5_path=d:\05_Send\
-5_options=1|0|0|0|0|1|0|
-activetab=6
+activetab=5
+activelocked=1
 [righttabs]
 0_path=d:\11_exaData\06_util\
 0_options=1|0|0|0|0|1|0|
