--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -174,6 +174,11 @@ cmd=cmd /k "c:\Program Files\totalcmd\ini\02_python\p2image.cmd"
 button=%commander_path%\ini\icons dll\minhwasoo.icl,87
 menu=Convert PDF to Image 
 
+[em_RunAQT]
+cmd=python "c:\Program Files\totalcmd\ini\02_python\run_aqt.py"
+button=%commander_path%\ini\icons dll\minhwasoo.icl,87
+menu= Generate pdf file from .aqt
+
 ; ****************************************************************************************************
 
 
