--- a/GHISLER/CONFIG/history.ini
+++ b/GHISLER/CONFIG/history.ini
@@ -1,26 +1,26 @@
 
 [MkDirHistory]
-0=반딧불이의 숲으로
-1=05_aqt test exam
-2=WindowLock
-3=05_기타
-4=04_웹스크레이퍼
-5=03_기사용관정
-6=02_기본관정데이타
-7=01_YangSoo
-8=01_YangSoo Test
-9=04_Pdf2Image Converter
-10=04_Python App
-11=35_ETC
-12=04_pdf2image
-13=ExaVideo
-14=12_dev
-15=AQTESOLV4.5
-16=aqusolv
-17=aqutesolve
-18=99_Etc
-19=12_사진대지 자동화
-20=tcer
+0=pdf2image, need file
+1=반딧불이의 숲으로
+2=05_aqt test exam
+3=WindowLock
+4=05_기타
+5=04_웹스크레이퍼
+6=03_기사용관정
+7=02_기본관정데이타
+8=01_YangSoo
+9=01_YangSoo Test
+10=04_Pdf2Image Converter
+11=04_Python App
+12=35_ETC
+13=04_pdf2image
+14=ExaVideo
+15=12_dev
+16=AQTESOLV4.5
+17=aqusolv
+18=aqutesolve
+19=99_Etc
+20=12_사진대지 자동화
 
 
 
