--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -175,7 +175,9 @@ button=%commander_path%\ini\icons dll\minhwasoo.icl,87
 menu=Convert PDF to Image 
 
 [em_RunAQT]
-cmd=python "c:\Program Files\totalcmd\ini\02_python\run_aqt.py"
+;= cmd=python "c:\Program Files\totalcmd\ini\02_python\run_aqt.py"
+;= cmd=python "c:\Program Files\totalcmd\ini\02_python\run_aqt_minor.py"
+cmd=python "c:\Program Files\totalcmd\ini\02_python\run_aqt_dontclosefile.py"
 button=%commander_path%\ini\icons dll\minhwasoo.icl,87
 menu= Generate pdf file from .aqt
 
