--- a/GHISLER/CONFIG/Extensions.ini
+++ b/GHISLER/CONFIG/Extensions.ini
@@ -12,21 +12,21 @@ ahk=""c:\Program Files\AutoHotkey\SciTE\SciTE.exe""
 ;gif=""C:\Program Files\Adobe\Adobe Photoshop 2022\photoshop.exe""
 ;dng=""C:\Program Files\Adobe\Adobe Photoshop 2022\photoshop.exe""
 
-psd = ""c:\Program Files\ACD Systems\ACDSee Ultimate\15.0\ACDSeeQVUltimate15.exe""
-jpg= ""c:\Program Files\ACD Systems\ACDSee Ultimate\15.0\ACDSeeQVUltimate15.exe""
-jpeg= ""c:\Program Files\ACD Systems\ACDSee Ultimate\15.0\ACDSeeQVUltimate15.exe""
-png= ""c:\Program Files\ACD Systems\ACDSee Ultimate\15.0\ACDSeeQVUltimate15.exe""
-bmp= ""c:\Program Files\ACD Systems\ACDSee Ultimate\15.0\ACDSeeQVUltimate15.exe""
-gif= ""c:\Program Files\ACD Systems\ACDSee Ultimate\15.0\ACDSeeQVUltimate15.exe""
-dng= ""c:\Program Files\ACD Systems\ACDSee Ultimate\15.0\ACDSeeQVUltimate15.exe""
+;psd = ""c:\Program Files\ACD Systems\ACDSee Ultimate\15.0\ACDSeeQVUltimate15.exe""
+;jpg= ""c:\Program Files\ACD Systems\ACDSee Ultimate\15.0\ACDSeeQVUltimate15.exe""
+;jpeg= ""c:\Program Files\ACD Systems\ACDSee Ultimate\15.0\ACDSeeQVUltimate15.exe""
+;png= ""c:\Program Files\ACD Systems\ACDSee Ultimate\15.0\ACDSeeQVUltimate15.exe""
+;bmp= ""c:\Program Files\ACD Systems\ACDSee Ultimate\15.0\ACDSeeQVUltimate15.exe""
+;gif= ""c:\Program Files\ACD Systems\ACDSee Ultimate\15.0\ACDSeeQVUltimate15.exe""
+;dng= ""c:\Program Files\ACD Systems\ACDSee Ultimate\15.0\ACDSeeQVUltimate15.exe""
 
-;psd = ""C:\Program Files\Adobe\Adobe Photoshop CC (64 Bit)\photoshop.exe""
-;jpg= ""C:\Program Files\Adobe\Adobe Photoshop CC (64 Bit)\photoshop.exe""
-;jpeg= ""C:\Program Files\Adobe\Adobe Photoshop CC (64 Bit)\photoshop.exe""
-;png= ""C:\Program Files\Adobe\Adobe Photoshop CC (64 Bit)\photoshop.exe""
-;bmp= ""C:\Program Files\Adobe\Adobe Photoshop CC (64 Bit)\photoshop.exe""
-;gif= ""C:\Program Files\Adobe\Adobe Photoshop CC (64 Bit)\photoshop.exe""
-;dng= ""C:\Program Files\Adobe\Adobe Photoshop CC (64 Bit)\photoshop.exe""
+psd = ""C:\Program Files\Adobe\Adobe Photoshop CC (64 Bit)\photoshop.exe""
+jpg= ""C:\Program Files\Adobe\Adobe Photoshop CC (64 Bit)\photoshop.exe""
+jpeg= ""C:\Program Files\Adobe\Adobe Photoshop CC (64 Bit)\photoshop.exe""
+png= ""C:\Program Files\Adobe\Adobe Photoshop CC (64 Bit)\photoshop.exe""
+bmp= ""C:\Program Files\Adobe\Adobe Photoshop CC (64 Bit)\photoshop.exe""
+gif= ""C:\Program Files\Adobe\Adobe Photoshop CC (64 Bit)\photoshop.exe""
+dng= ""C:\Program Files\Adobe\Adobe Photoshop CC (64 Bit)\photoshop.exe""
 
 
 ;dwg=""C:\Program Files\Autodesk\AutoCAD 2021\acad.exe" "%1""
