--- a/GHISLER/CONFIG/Searches.ini
+++ b/GHISLER/CONFIG/Searches.ini
@@ -37,6 +37,18 @@
 06_Thumbs.db_SearchText=
 06_Thumbs.db_SearchFlags=0|002002000020|||||||||0000|||
 06_Thumbs.db_plugin=tc.fullname contains Thumbs.db 
+.+_1.jpg_SearchFor=.+_1.jpg
+.+_1.jpg_SearchIn=
+.+_1.jpg_SearchText=
+.+_1.jpg_SearchFlags=0|002002001020|||||||||0000|||
+.+_01.jpg_SearchFor=.+_01.jpg
+.+_01.jpg_SearchIn=
+.+_01.jpg_SearchText=
+.+_01.jpg_SearchFlags=0|002002001020|||||||||0000|||
+^p.*page1\.jpg$_SearchFor=^p.*page1\.jpg$
+^p.*page1\.jpg$_SearchIn=
+^p.*page1\.jpg$_SearchText=
+^p.*page1\.jpg$_SearchFlags=0|002002001020|||||||||0000|||
 
 
 [SearchName]
