--- a/GHISLER/CONFIG/DirMenu.ini
+++ b/GHISLER/CONFIG/DirMenu.ini
@@ -68,112 +68,116 @@ menu35=--
 menu36=-ExaData
 menu37=11_exaData
 cmd37=cd d:\11_exaData
-menu38=05_WSH
-cmd38=cd d:\11_exaData\05_OS\05_WSH
+menu38=04_dev
+cmd38=cd d:\11_exaData\04_dev
 menu39=05_OS
 cmd39=cd d:\11_exaData\05_OS
-menu40=06_Utility
-cmd40=cd d:\11_exaData\06_util
-menu41=016_Dev Tool
-cmd41=cd d:\11_exaData\06_util\016_dev tool
-menu42=010_ZZATURI
-cmd42=cd d:\11_exaData\06_util\010_ZZATURI
-menu43=01_Test Program
-cmd43=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
-menu44=12_BAT_FFMPEG
-cmd44=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
-menu45=10_cmder
-cmd45=cd d:\11_exaData\06_util\099_Game\10_cmder
-menu46=099_Game
+menu40=OS --> 05_WSH
+cmd40=cd d:\11_exaData\05_OS\05_WSH
+menu41=06_Utility
+cmd41=cd d:\11_exaData\06_util
+menu42=util --> 016_dev Tool
+cmd42=cd d:\11_exaData\06_util\016_dev tool
+menu43=util --> 010_ZZATURI
+cmd43=cd d:\11_exaData\06_util\010_ZZATURI
+menu44=util --> zzaturi --> 01_Test Program
+cmd44=cd d:\11_exaData\06_util\010_ZZATURI\01_Test Program
+menu45=12_BAT_FFMPEG
+cmd45=cd d:\11_exaData\06_util\020_VideoEditing\12_BAT_FFMPEG
+menu46=util --> 099_Game
 cmd46=cd d:\11_exaData\06_util\099_Game
-menu47=00_Program Data
-cmd47=cd d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\00_Program Data
-menu48=--
-menu49=-HardRain, Report
-menu50=WHPA
-cmd50=cd c:\WHPA
-menu51=04_Reference Data
-cmd51=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
-menu52=11_JungCheon Photo by Season
-cmd52=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
-menu53=07_LandSlide
-cmd53=cd d:\12_dev\02_Excel\07_LandSlide
-menu54=05_ihanseol - 2020
-cmd54=cd d:\09_hardRain\05_ihanseol - 2020
-menu55=06_ihanseol - 2021
-cmd55=cd d:\09_hardRain\06_ihanseol - 2021
-menu56=07_ihanseol - 2022
-cmd56=cd d:\09_hardRain\07_ihanseol - 2022
-menu57=08_ihanseol - 2023
-cmd57=cd d:\09_hardRain\08_ihanseol - 2023
-menu58=--
-menu59=-WSL2
-menu60=WSL LocalState EXT4
-cmd60=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
-menu61=WSL minhwasoo
-cmd61=cd a:\home\minhwasoo
-menu62=--
-menu63=-Git Bash
-menu64=Git
-cmd64=cd C:\Program Files\Git
-menu65=gitbash /usr/bin
-cmd65=cd C:\Program Files\Git\usr\bin
-menu66=gitbash - mingw64 - bin
-cmd66=cd C:\Program Files\Git\mingw64\bin
-menu67=gitbvash - mingw64 - git-core
-cmd67=cd C:\Program Files\Git\mingw64\libexec\git-core
-menu68=gitbash - mergetools
-cmd68=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
-menu69=--
-menu70=-Appdata and Local
-menu71=d:/12_dev/  Action and Configuration
-cmd71=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
-menu72=Sublime Installed Packages
-cmd72=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
-menu73=Sublime Packages
-cmd73=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
-menu74=Sublime Packages User
-cmd74=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
-menu75=FlowLauncher CustomIcons
-cmd75=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
-menu76=Bing WPImages
-cmd76=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
-menu77=AppData Local
-cmd77=cd C:\Users\minhwasoo\AppData\Local
-menu78=AddData Roaming
-cmd78=cd C:\Users\minhwasoo\AppData\Roaming
-menu79=WindowsTerminal Setting
-cmd79=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
-menu80=ProgramData
-cmd80=cd C:\ProgramData
-menu81=--
-menu82=-12_dev --> excel
-menu83=02_Excel2 --> 01_Acquifer Pumping Test
-cmd83=cd d:\12_dev\02_Excel2\01_Acquifer Pumping Test
-menu84=--
-menu85=02_ROMS
-cmd85=cd d:\11_exaData\10_Game\02_ROMS
-menu86=00_Emule
-cmd86=cd C:\ProgramData\00_Emule
-menu87=03_download
-cmd87=cd d:\03_download
-menu88=03_my_script
-cmd88=cd d:\12_dev\03_visual_lisp\03_my_script
-menu89=02_Book
-cmd89=cd d:\02_Book
-menu90=08_나의작업
-cmd90=cd d:\08_나의작업\
-menu91=04_mp3
-cmd91=cd d:\04_mp3
-menu92=05_Send
-cmd92=cd d:\05_Send
-menu93=06_Send2
-cmd93=cd d:\06_Send2
-menu94=C:_Temp
-cmd94=cd c:\Temp
-menu95=e: download
-cmd95=cd e:\download
-menu96=Bing
-cmd96=cd d:\10_photo\Desktop Pictures\bing
-menu97=NAS4DUAL 06_util
-cmd97=cd z:\11_exaData\06_util
+menu47=util --> 99_Game --> 10_cmder
+cmd47=cd d:\11_exaData\06_util\099_Game\10_cmder
+menu48=util --> 099_Game --> tcplugin --> 00_Program Data
+cmd48=cd d:\11_exaData\06_util\099_Game\01_ToatalCommander Plugin\00_Program Data
+menu49=--
+menu50=-HardRain, Report
+menu51=WHPA
+cmd51=cd c:\WHPA
+menu52=04_Reference Data
+cmd52=cd d:\09_hardRain\08_ihanseol - 2023\00_data\04_Reference Data
+menu53=11_JungCheon Photo by Season
+cmd53=cd d:\09_hardRain\A1_jeong_cheon\11_JungCheon Photo by Season
+menu54=07_LandSlide
+cmd54=cd d:\12_dev\02_Excel\07_LandSlide
+menu55=05_ihanseol - 2020
+cmd55=cd d:\09_hardRain\05_ihanseol - 2020
+menu56=06_ihanseol - 2021
+cmd56=cd d:\09_hardRain\06_ihanseol - 2021
+menu57=07_ihanseol - 2022
+cmd57=cd d:\09_hardRain\07_ihanseol - 2022
+menu58=08_ihanseol - 2023
+cmd58=cd d:\09_hardRain\08_ihanseol - 2023
+menu59=--
+menu60=-WSL2
+menu61=WSL LocalState EXT4
+cmd61=cd C:\Users\minhwasoo\AppData\Local\Packages\CanonicalGroupLimited.Ubuntu_79rhkp1fndgsc\LocalState
+menu62=WSL minhwasoo
+cmd62=cd a:\home\minhwasoo
+menu63=--
+menu64=-Git Bash
+menu65=Git
+cmd65=cd C:\Program Files\Git
+menu66=gitbash /usr/bin
+cmd66=cd C:\Program Files\Git\usr\bin
+menu67=gitbash - mingw64 - bin
+cmd67=cd C:\Program Files\Git\mingw64\bin
+menu68=gitbvash - mingw64 - git-core
+cmd68=cd C:\Program Files\Git\mingw64\libexec\git-core
+menu69=gitbash - mergetools
+cmd69=cd C:\Program Files\Git\mingw64\libexec\git-core\mergetools
+menu70=--
+menu71=-Appdata and Local
+menu72=d:/12_dev/  Action and Configuration
+cmd72=cd d:\12_dev\01_Linux\08_wincmd.ini\Action and Configuration
+menu73=Sublime Installed Packages
+cmd73=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Installed Packages
+menu74=Sublime Packages
+cmd74=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages
+menu75=Sublime Packages User
+cmd75=cd C:\Users\minhwasoo\AppData\Roaming\Sublime Text\Packages\User
+menu76=AppData --> Local
+cmd76=cd C:\Users\minhwasoo\AppData\Local
+menu77=AddData --> Roaming
+cmd77=cd C:\Users\minhwasoo\AppData\Roaming
+menu78=Appdata --> FlowLauncher CustomIcons
+cmd78=cd C:\Users\minhwasoo\AppData\Roaming\FlowLauncher\Settings\Plugins\Flow.Launcher.Plugin.WebSearch\CustomIcons
+menu79=Appdata --> Bing WPImages
+cmd79=cd C:\Users\minhwasoo\AppData\Local\Microsoft\BingWallpaperApp\WPImages
+menu80=Appdata --> WindowsTerminal Setting
+cmd80=cd C:\Users\minhwasoo\AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState
+menu81=ProgramData
+cmd81=cd C:\ProgramData
+menu82=programdata ---> 01_Inspection Tool
+cmd82=cd C:\ProgramData\36_Automation\01_Inspection Tool
+menu83=--
+menu84=-12_dev --> excel
+menu85=02_Excel2 --> 01_Acquifer Pumping Test
+cmd85=cd d:\12_dev\02_Excel2\01_Acquifer Pumping Test
+menu86=--
+menu87=02_ROMS
+cmd87=cd d:\11_exaData\10_Game\02_ROMS
+menu88=00_Emule
+cmd88=cd C:\ProgramData\00_Emule
+menu89=03_download
+cmd89=cd d:\03_download
+menu90=03_my_script
+cmd90=cd d:\12_dev\03_visual_lisp\03_my_script
+menu91=02_Book
+cmd91=cd d:\02_Book
+menu92=08_나의작업
+cmd92=cd d:\08_나의작업\
+menu93=04_mp3
+cmd93=cd d:\04_mp3
+menu94=05_Send
+cmd94=cd d:\05_Send
+menu95=06_Send2
+cmd95=cd d:\06_Send2
+menu96=C:_Temp
+cmd96=cd c:\Temp
+menu97=e: download
+cmd97=cd e:\download
+menu98=Bing
+cmd98=cd d:\10_photo\Desktop Pictures\bing
+menu99=NAS4DUAL 06_util
+cmd99=cd z:\11_exaData\06_util
