--- a/GHISLER/usercmd.ini
+++ b/GHISLER/usercmd.ini
@@ -177,7 +177,9 @@ menu=Convert PDF to Image
 [em_RunAQT]
 ;= cmd=python "c:\Program Files\totalcmd\ini\02_python\run_aqt.py"
 ;= cmd=python "c:\Program Files\totalcmd\ini\02_python\run_aqt_minor.py"
-cmd=python "c:\Program Files\totalcmd\ini\02_python\run_aqt_dontclosefile.py"
+;= cmd=python "c:\Program Files\totalcmd\ini\02_python\run_aqt_dontclosefile.py"
+
+cmd="c:\Program Files\totalcmd\ini\02_python\p2run_aqt.cmd"
 button=%commander_path%\ini\icons dll\minhwasoo.icl,87
 menu= Generate pdf file from .aqt
 
